--- a/src/index.njk
+++ b/src/index.njk
@@ -15,7 +15,7 @@
     <div class="blog-entry">
      {% for blog in blog.blogs %}
         <h4>
-          <a href="blog/{{ blog.slug }}.html" class="blog-title">{{ blog.headline }}</a>
+          <a href="/docs/blog/{{ blog.slug }}.html" class="blog-title">{{ blog.headline }}</a>
           </h4>
         <p class="blog-date"> {{ blog.date }}</p>
      {% endfor %}
